test/should-pass/pass/exported-init/exe-main.dk
// -*- mode: Dakota; c-basic-offset: 2; tab-width: 2; indent-tabs-mode: nil -*-

klass thing
{
  method object-t init(object-t self)
  {
    return self;
  }
}

int-t main()
{
  object-t o = make(thing::klass);
  USE(o);
  return 0;
}
